# dbms_labs

./: .dockerignore  .gitignore  README.md
heap/: CMakeLists.txt  Dockerfile  Makefile  Makefile.example  README.md  heap.cpp  heap.h  main.cpp
heap/diagrams/: heap.puml
heap/report/: СУБД_ЛР2_Куча.docx
heap/src/: heap.cpp  heap.h
heap/test/: heap_test.cpp
my_array/: Dockerfile  Makefile  README.md  main.cpp  myArray.cpp
